--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
             }
             
             return somaNotas / notas.length
+
+
+            let foforaoottotossos = 0
         }        
-        
+        // agora foi
         let notas = cadastraNotas()
         let media = calculaMedia(notas)
 
