--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
            rtdtrdtrdydrtdt
             let foforaoottotossos = 0
         }        
+        rdsreresresresrtesrtse
         // agora foi
         let notas = cadastraNotas()
         let media = calculaMedia(notas)
